# zookeeper-k8s-operator

./: .gitignore  .readthedocs.yaml  ;  CONTRIBUTING.md  README.md  ]  actions.yaml  charmcraft.yaml  config.yaml  flake.nix  metadata.yaml  package-lock.json  package.json  pyproject.toml  renovate.json5  requirements-dev.txt  requirements.txt  tox.bak.ini  tox.ini
.github/: .jira_sync_config.yaml
.github/workflows/: ci.yaml  release.yaml  sync_issue_to_jira.yaml  tics_run_sh_ghaction_test.yml
docs/: .custom_wordlist.txt  conf.py  index.md
docs/.sphinx/: .wordlist.dic
docs/content/explanation/: ha.md
docs/content/how-to/: deploy.md  index.md
docs/content/reference/: index.md
docs/content/tutorial/: cleanup.md  deploy.md  index.md  integrate.md  setup.md
lib/charms/data_platform_libs/v0/: upgrade.py
lib/charms/rolling_ops/v0/: rollingops.py
lib/charms/zookeeper/v0/: client.py
lib/charms/zookeeper_k8s/v0/: client.py  cluster.py  zookeeper.py
src/: charm.py  cluster.py  config.py  literals.py  provider.py  tls.py  utils.py  workload.py  zookeeper_provides.py
src/alert_rules/prometheus/: zookeeper_metrics.rules
src/core/: cluster.py  models.py  structured_config.py  workload.py
src/events/: backup.py  password_actions.py  provider.py  tls.py  upgrade.py
src/grafana_dashboards/: zookeeper-metrics.json
src/managers/: backup.py  config.py  k8s.py  quorum.py  tls.py
src/prometheus_alert_rules/: high_file_descriptors.rule
templates/: zookeeper.properties.j2
tests/integration/: __init__.py  helpers.py  test_backup.py  test_charm.py  test_password_rotation.py  test_provider.py  test_scaling.py  test_tls.py  test_upgrade.py  test_zookeeper_provider.py
tests/integration/app-charm/: metadata.yaml
tests/integration/app-charm/src/: charm.py
tests/integration/data/: inter.srl
tests/integration/ha/: conftest.py  continuous_writes.py  helpers.py  test_ha.py  test_replication.py
tests/integration/ha/manifests/: extend_pebble_restart_delay.yaml  restore_pebble_restart_delay.yaml
tests/integration/ha/scripts/: deploy_chaos_mesh.sh  destroy_chaos_mesh.sh
tests/interface_tests/: conftest.py
tests/unit/: conftest.py  test_charm.py  test_client.py  test_cluster.py  test_config.py  test_provider.py  test_quorum.py  test_structured_config.py  test_tls.py  test_zookeeper_provider.py
tests/unit/scenario/: test_provider.py
